tests/error/decodeUtf8-wrong-argument.uplc
(program 0.0.0 [(builtin decodeUtf8) (con integer 61)])